// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a default DialogBox control 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  dialogType="info"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message=""
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={false}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox test-class"
    >
      <styled.div>
        <Styled(Icon)
          iconName="info-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#5bc0de",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p></p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test pressing the "yes" button on the default DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="info"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message="Testing click handler for yes"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[MockFunction]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="info-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#5bc0de",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Testing click handler for yes</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test retrieval of DialogBox props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "dialogType": "info",
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "left": "",
  "location": "none",
  "message": "",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "DialogBox",
  "onClose": [Function],
  "onOpen": [Function],
  "onSelection": [Function],
  "padding": "",
  "selected": false,
  "show": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of an custom DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="custom"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="car"
  id=""
  left=""
  location="none"
  message="Sample info message"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={
    Object {
      "color": "magenta",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="car"
          sizing="xxlarge"
          style={
            Object {
              "color": "magenta",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Sample info message</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test the creation of an error DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="error"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message="Sample error message"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="times-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#d9534f",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Sample error message</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test the creation of an info DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="info"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message="Sample info message"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="info-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#5bc0de",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Sample info message</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test the creation of an success DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="success"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message="Sample success message"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="check-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#5cb85c",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Sample success message</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;

exports[`Test the creation of an warning DialogBox 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  dialogType="warning"
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  left=""
  location="none"
  message="Sample warning message"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="DialogBox"
  onClose={[Function]}
  onError={[Function]}
  onOpen={[Function]}
  onSelection={[Function]}
  padding=""
  reset={false}
  selected={false}
  show={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    closeTimeoutMS={0}
    contentLabel="DialogBox"
    isOpen={true}
    onAfterOpen={[Function]}
    onRequestClose={[Function]}
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={false}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
    style={
      Object {
        "content": Object {
          "bottom": "auto",
          "left": "50%",
          "marginRight": "-50%",
          "padding": "15px",
          "right": "auto",
          "top": "40%",
          "transform": "translate(-50%, -50%)",
        },
      }
    }
  >
    <styled.div
      className="ui-dialogbox"
    >
      <styled.div>
        <Styled(Icon)
          iconName="exclamation-circle"
          sizing="xxlarge"
          style={
            Object {
              "color": "#f0ad4e",
            }
          }
        />
      </styled.div>
      <styled.div>
        <styled.div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Sample warning message</p>",
            }
          }
        />
        <styled.div>
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="Yes"
          />
          <styled.div />
          <Styled(ButtonText)
            justify={2}
            noicon={true}
            onClick={[Function]}
            sizing="normal"
            text="No"
          />
        </styled.div>
      </styled.div>
    </styled.div>
  </Modal>
</Wrapper>
`;
